tests/negative/neg_pr1112a_local_shared.safe
package neg_pr1112a_local_shared

   type settings is record
      value : integer;

   function bad
      shared cfg : settings = (value = 1);
